--- a/src/components/TextEditor.css
+++ b/src/components/TextEditor.css
@@ -119,6 +119,25 @@ body.acrylic-mode .line-numbers {
 
 .line-number {
   line-height: 1.5;
+  position: relative;
+}
+
+.line-number.highlighted {
+  background-color: rgba(255, 255, 0, 0.2);
+  animation: lineHighlightFade 2s ease-out forwards;
+}
+
+[data-theme="dark"] .line-number.highlighted {
+  background-color: rgba(255, 255, 0, 0.15);
+}
+
+@keyframes lineHighlightFade {
+  0% {
+    background-color: rgba(255, 255, 0, 0.3);
+  }
+  100% {
+    background-color: transparent;
+  }
 }
 
 .editor-content-wrapper {
@@ -158,7 +177,7 @@ body.acrylic-mode .editor-content-wrapper {
   border: none;
   outline: none !important;
   color: var(--text-primary);
-  font-family: inherit;
+  font-family: 'Consolas', 'Monaco', 'Courier New', monospace;
   font-size: inherit;
   line-height: 1.5;
   resize: none;
@@ -167,12 +186,28 @@ body.acrylic-mode .editor-content-wrapper {
   tab-size: 2;
   -moz-tab-size: 2;
   z-index: 2;
+  letter-spacing: normal;
+  word-spacing: normal;
+  -webkit-font-smoothing: subpixel-antialiased;
+  -moz-osx-font-smoothing: auto;
 }
 
 .editor-textarea.with-highlight {
   color: transparent;
   caret-color: var(--text-primary);
   -webkit-text-fill-color: transparent;
+  background: transparent !important;
+}
+
+.editor-textarea.with-highlight::selection {
+  background-color: rgba(59, 130, 246, 0.3);
+  color: transparent;
+  -webkit-text-fill-color: transparent;
+}
+
+.editor-textarea.with-highlight::-moz-selection {
+  background-color: rgba(59, 130, 246, 0.3);
+  color: transparent;
 }
 
 .editor-textarea:not(.with-highlight) {
